deploy/openshift/apps/event-stats/event-statistics.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
    app.openshift.io/connects-to: "fights-kafka,apicurio,otel-collector"
    app.openshift.io/vcs-ref: main
    app.quarkus.io/build-timestamp: 2023-06-30 - 21:15:06 +0000
    prometheus.io/scrape: "true"
    prometheus.io/path: /q/metrics
    prometheus.io/port: "8085"
    prometheus.io/scheme: http
  labels:
    app.kubernetes.io/name: event-statistics
    app.kubernetes.io/part-of: event-stats
    app.kubernetes.io/version: java17-latest
    app: event-statistics
    application: event-stats
    system: quarkus-super-heroes
    app.kubernetes.io/managed-by: quarkus
    app.openshift.io/runtime: quarkus
  name: event-statistics
spec:
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 8443
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8085
  selector:
    app.kubernetes.io/name: event-statistics
    app.kubernetes.io/part-of: event-stats
    app.kubernetes.io/version: java17-latest
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/connects-to: "fights-kafka,apicurio,otel-collector"
    app.quarkus.io/vcs-ref: main
    app.quarkus.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
    app.quarkus.io/build-timestamp: 2023-06-30 - 21:15:06 +0000
    prometheus.io/scrape: "true"
    prometheus.io/path: /q/metrics
    prometheus.io/port: "8085"
    prometheus.io/scheme: http
  labels:
    app: event-statistics
    application: event-stats
    system: quarkus-super-heroes
    app.kubernetes.io/managed-by: quarkus
    app.kubernetes.io/name: event-statistics
    app.kubernetes.io/part-of: event-stats
    app.kubernetes.io/version: java17-latest
  name: event-statistics
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: event-statistics
      app.kubernetes.io/part-of: event-stats
      app.kubernetes.io/version: java17-latest
  template:
    metadata:
      annotations:
        app.openshift.io/connects-to: "fights-kafka,apicurio,otel-collector"
        app.quarkus.io/vcs-ref: main
        app.quarkus.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
        app.quarkus.io/build-timestamp: 2023-06-30 - 21:15:06 +0000
        prometheus.io/scrape: "true"
        prometheus.io/path: /q/metrics
        prometheus.io/port: "8085"
        prometheus.io/scheme: http
      labels:
        app: event-statistics
        application: event-stats
        system: quarkus-super-heroes
        app.kubernetes.io/managed-by: quarkus
        app.kubernetes.io/name: event-statistics
        app.kubernetes.io/part-of: event-stats
        app.kubernetes.io/version: java17-latest
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: quay.io/quarkus-super-heroes/event-statistics:java17-latest
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/live
              port: 8085
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          name: event-statistics
          ports:
            - containerPort: 8085
              name: http
              protocol: TCP
            - containerPort: 8443
              name: https
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/ready
              port: 8085
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          resources:
            limits:
              memory: 768Mi
            requests:
              memory: 256Mi
          startupProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/started
              port: 8085
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.openshift.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
    app.openshift.io/connects-to: "fights-kafka,apicurio,otel-collector"
    app.openshift.io/vcs-ref: main
    app.quarkus.io/build-timestamp: 2023-06-30 - 21:15:06 +0000
  labels:
    app.kubernetes.io/name: event-statistics
    app.kubernetes.io/part-of: event-stats
    app.kubernetes.io/version: java17-latest
    app: event-statistics
    application: event-stats
    system: quarkus-super-heroes
    app.kubernetes.io/managed-by: quarkus
    app.openshift.io/runtime: quarkus
  name: event-statistics
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: event-statistics
